added build and test steps to simple pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
               run: npm install
             - name: check style
               run: npm run eslint --fix
+            - name: build
+              run: npm run build
+            - name: test
+              run: npm run test
